# localize

./: .env.example  .gitignore  plan.txt  pyproject.toml  requirements.txt
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/dashboard/: tab-navigation.tsx  translation-row.tsx  translation-table.tsx
frontend/src/components/layout/: language-sidebar.tsx  nav-bar.tsx
frontend/src/components/modals/: add-language-modal.tsx  llm-review-overlay.tsx  review-single-modal.tsx  translate-progress-modal.tsx
frontend/src/components/settings/: direct-file-config.tsx  file-upload.tsx
frontend/src/hooks/: use-file-config.ts  use-sse-progress.ts  use-translations.ts
frontend/src/lib/: constants.ts
frontend/src/types/: api.ts  job.ts
src/: __init__.py  cli.py  config.py
src/extraction/: __init__.py  xcstrings_parser.py  xcstrings_writer.py
src/models/: __init__.py  string_entry.py  translation_result.py
src/translation/: __init__.py  translator.py
src/translation/clients/: __init__.py  deepl_client.py  openai_client.py
src/validation/: __init__.py  llm_reviewer.py  placeholder_validator.py  quality_scorer.py
src/web/: __init__.py  app.py
src/web/routes/: api.py  pages.py  sse.py
src/web/services/: direct_file_service.py  file_storage.py  job_manager.py  review_history.py  translation_service.py
src/web/templates/: base.html  dashboard.html  error.html  review.html  settings.html  stats.html  translate.html
tests/: Localizable.xcstrings
(+6 files in other folders)
